Add an optional VoLTE icon to statusbar
Extracted from CAF and adapted to AOSP by @xyyx
Added switch to statusbar icon blacklist by @xyyx

Original commits:
codeaurora-unofficial/platform-frameworks-base@8c968e8
AOSPA/android_frameworks_base@4dabbbe

new volte icon for user request credits to www.flaticon.com and @samjsrmj

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -61,6 +61,9 @@
     <!-- When the battery is low, this is displayed to the user in a dialog.  The title of the low battery alert.  [CHAR LIMIT=NONE]-->
     <string name="battery_low_title">Battery is low</string>
 
+<!-- volte icon switch -->
+    <string name="status_bar_volte">VoLTE</string>
+
     <!-- A message that appears when the battery level is getting low in a dialog.  This is
         appened to the subtitle of the low battery alert.  "percentage" is the percentage of battery
         remaining [CHAR LIMIT=none]-->
